[package]
name = "iced_testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.8.0", features = ["image"] }
ascii_crypt = { git = "https://github.com/panda3045/ascii-crypt.git" }
